@@ -193,8 +193,12 @@
 #undef HAVE_LIBTHREAD
 
 /* Name of package */
+#if !defined(PACKAGE)
 #undef PACKAGE
+#endif
 
 /* Version number of package */
+#if !defined(VERSION)
 #undef VERSION
+#endif
 
